# generation_3dnn

./: .gitignore  CMakeLists.txt  readme.md
editeur/shaders/: 6planar.shader  include_lumiere.cginc  include_vertex.cginc
editeur/source/: BehaviourEditeur.cs  Routines.cs
editeur/source/editeur/: AppareilPhoto.cs  BehaviourEditeur.cs  Mouvement3d.cs  Projecteur.cs  VueImporter.cs  VueMenu.cs  planesX.mat  planesY.mat  planesZ.mat  solid.mat  transparentAppuye.mat  wf.mat
editeur/source/editeur/Apprendre/: FenetreEditeurSchemaBibliotheque.cs  FenetreEditeurSchemaFichier.cs  FenetreEditeurSchemaMotifSelectionne.cs  FenetreEditeurSchemaMotifs.cs  FenetreEditeurSchemaPrevisualiser.cs  VueApprendre.cs
editeur/source/editeur/Scripter/: FenetreEditeurRegionFichier.cs  FenetreEditeurRegionScript.cs  VueScripter.cs
editeur/source/generation_procedurale_api/: GeometrieProceduraleAPI.cs  Geometrie_Old_EditerMeshParPointeur.cs  MoteurRendu.cs  Region.cs  geometrie_procedurale.cs
editeur/source/util/: FichierJpg.cs  FichierObj.cs
editeur/source/util/Routines/: SRoutines.cs  URoutineBase.cs  URoutineSimple.cs
include/: generation_procedurale.hpp  libgproc.h
source/: GPROC.h  __debug.cpp  __lua.cpp  __matlab.cpp  __structures.cpp  __unity.cpp  entrainer_ia.m  generation__generer_geometrie.cpp  generation__generer_texture.cpp  generation_procedurale.hpp  libgproc.cpp  organisation__charger_projet.cpp  organisation__creer_projet.cpp  preparation__calculer_geometrie.cpp  preparation__charger_geometrie.cpp  preparation__commencer_entrainement_texture.cpp  preparation__interrompre_entrainement_texture.cpp  preparation__obtenir_resultats_entrainement_texture.cpp  preparation__sauvegarder_geometrie.cpp  texture_procedurale.cpp  texture_procedurale.h
source/cpp/: __debug.cpp  preparation__commencer_entrainement_texture.cpp  preparation__obtenir_resultats_entrainement_texture.cpp  preparation__sauvegarder_geometrie.cpp
source/matlab/: predire_ia.m
source/matlab/pix2pix/networks/: generator.m
source/pix2pix/data/: PairedImageDatastore.m
source/pix2pix/networks/: discriminator.m  downBlock.m  upBlock.m
